// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`repoReducer repoReducer appends a new repo to state on action ADD_REPO 1`] = `
Object {
  "17": Object {
    "corsProxy": "http://www.oregonstate.edu/",
    "id": "17",
    "name": "sampleUser/forkedRepo",
    "oauth": "github",
    "password": "12345",
    "refs": Array [
      "601421",
      "843449",
    ],
    "root": "/",
    "token": "a78bw2591q592s0996q1498c1284",
    "url": Object {
      "hash": "",
      "href": "https://github.com/sampleUser/forkedRepo",
      "pathname": "/sampleUser/forkedRepo",
      "port": null,
      "protocol": "https",
      "protocols": Array [
        "https",
      ],
      "query": Object {},
      "resource": "github.com",
      "search": "",
      "user": "",
    },
    "username": "sampleUser",
  },
  "23": Object {
    "corsProxy": "http://www.oregonstate.edu/",
    "id": "23",
    "name": "sampleUser/myRepo",
    "oauth": "github",
    "password": "12345",
    "refs": Array [
      "942043",
      "234412",
      "194724",
    ],
    "root": "sampleUser/",
    "token": "584n29dkj1683a67f302x009q164",
    "url": Object {
      "hash": "",
      "href": "https://github.com/sampleUser/myRepo",
      "pathname": "/sampleUser/myRepo",
      "port": null,
      "protocol": "https",
      "protocols": Array [
        "https",
      ],
      "query": Object {},
      "resource": "github.com",
      "search": "",
      "user": "",
    },
    "username": "sampleUser",
  },
}
`;

exports[`repoReducer repoReducer returns default state when current state is blank 1`] = `
Object {
  "17": Object {
    "corsProxy": "http://www.oregonstate.edu/",
    "id": "17",
    "name": "sampleUser/forkedRepo",
    "oauth": "github",
    "password": "12345",
    "refs": Array [
      "601421",
      "843449",
    ],
    "root": "/",
    "token": "a78bw2591q592s0996q1498c1284",
    "url": Object {
      "hash": "",
      "href": "https://github.com/sampleUser/forkedRepo",
      "pathname": "/sampleUser/forkedRepo",
      "port": null,
      "protocol": "https",
      "protocols": Array [
        "https",
      ],
      "query": Object {},
      "resource": "github.com",
      "search": "",
      "user": "",
    },
    "username": "sampleUser",
  },
}
`;

exports[`repoReducer repoReducer updates state of matched repo on action UPDATE_REPO 1`] = `
Object {
  "23": Object {
    "corsProxy": "http://www.oregonstate.edu/",
    "id": "23",
    "name": "sampleUser/myRepo",
    "oauth": "bitbucket",
    "password": "12345",
    "refs": Array [
      "942043",
      "234412",
      "194724",
    ],
    "root": "sampleUser/",
    "token": "584n29dkj1683a67f302x009q164",
    "url": Object {
      "hash": "",
      "href": "https://github.com/sampleUser/myRepo",
      "pathname": "/sampleUser/myRepo",
      "port": null,
      "protocol": "https",
      "protocols": Array [
        "https",
      ],
      "query": Object {},
      "resource": "github.com",
      "search": "",
      "user": "",
    },
    "username": "sampleUser",
  },
}
`;
